alignment issue

--- a/sass/tooplate-style.scss
+++ b/sass/tooplate-style.scss
@@ -152,7 +152,7 @@ b, strong {
 }
 
 .animated-item {
-    font-size: 32px;
+    font-size: 30px;
     line-height: inherit;
     display: block;
     opacity: 0;
